@@ -21,7 +21,7 @@ Test_CompressorFactory::get_compressor (
   // @todo, make a array based on compression level
   if (CORBA::is_nil (compressor_.in ()))
     {
-      compressor_ = new TestCompressor (compression_level, this);
+      compressor_ = new TestCompressor (this, compression_level);
     }
 
   return ::Compression::Compressor::_duplicate (compressor_.in ());
